# SNUCSE-LC3DevLog

./: CMake라이브러리화방법.md  CMake란.md  readme.md
CMakeLibrary/: CMakeLists.txt  설명.md
CMakeLibrary/src/MathModule/: CMakeLists.txt  MathFunctions.h
CMakeLibrary/src/UtilityModule/: CMakeLIsts.txt  Logger.cpp
CMakeLibrary/tests/: CMakeLIsts.txt  TestMain.cpp
CMakeTestModule/: CMakeLists.txt  main.cpp  설명.md
CMakeTestModule/MathModule/: CMakeLists.txt  MathFunctions.cpp
CMakeTestModule/StringModule/: CMakeLIsts.txt  StringFunctions.cpp  StringFunctions.h
CMakeTestModule/Tests/: CMakeLists.txt  MathModuleTests.cpp  StringModuleTests.cpp  UtilityModuleTests.cpp
CMakeTestModule/UtilityModule/: CMakeLists.txt
CMakeTutorial/: CMakeLists.txt
CMakeTutorial2/: CMakeLists.txt  main.cpp  설명.md
CMakeTutorial2/MathModule/: CMakeLists.txt
CMakeTutorial2/UtilityModule/: CMakeLists.txt  Logger.h
